@@ -31,6 +31,7 @@ munin (1.0.0pre2)
   * More timeouts in munin-update (Deb#222674).
   * Added max value to generic/vmstat plugin (Deb#225489).
   * Bugfix in install-doc Makefile target (SF#884074).
+  * Code tidying in munin-graph (SF#884625).
 
 munin (1.0.0pre1)
 
